deployments/openshift/kustomize/base/kibana/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
    name: kibana
    labels:
        "app.kubernetes.io/part-of": ek-stack
spec:
    replicas: 1
    selector:
        matchLabels:
            app: kibana
    template:
        metadata:
            labels:
                app: kibana
                name: kibana
        spec:
            containers:
                - name: kibana
                  image: docker.elastic.co/kibana/kibana:8.11.1
                  resources:
                      limits:
                          cpu: 100m
                          memory: 1Gi
                      requests:
                          cpu: 10m
                          memory: 500Mi
                  ports:
                      - containerPort: 5601
