deployments/openshift/kustomize/base/kibana/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kibana
spec:
  to:
    kind: Service
    name: kibana
  port:
    targetPort: 5601
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
